
// ------------------------------------------------------------------------------
//  <auto-generated>
//      This code was generated by 'AS\AS.Tools\Discovery\Contracts\Discoverable.generated.tt' template.
// 
//      Changes to this file may cause incorrect behavior and will be lost if
//      the code is regenerated.
//  </auto-generated>
// ------------------------------------------------------------------------------
syntax = "proto3";

package AS;
option csharp_namespace = "GrpcProxyTest.Protobuf";

service TestInterface {
    rpc TestMethod (TestMethodRequest) returns (TestMethodReply);
}

message TestMethodRequest {
	string input = 1;
}

message TestMethodReply {
	string output = 1;
}